# jukebox

./: .gitignore  README.md  cabal.project.local  jukebox.cabal
cmd/jukebox/: Main.hs
docs/: DESIGN.md
src/Jukebox/: API.hs  HTML.hs  Rooms.hs
web/: .gitignore  esbuild.js  package-lock.json  package.json  room.js  tailwind.config.js  tsconfig.json
web/src/: Player.tsx  Room.tsx  debug.ts  root.tsx
