cabal-version: 3.4
name:          jukebox
version:       0.1.0.0
tested-with:   GHC ==9.4.8

common options
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDeriving
    ExplicitNamespaces
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    QuasiQuotes
    RecordWildCards
    StrictData
    TemplateHaskell
    TypeFamilies

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wcompat
    -Wincomplete-record-updates -Wmissing-home-modules
    -Wmissing-export-lists -Wredundant-constraints -Wunused-packages

common base
  build-depends: base ==4.17.2.1

common relude
  build-depends: relude ==1.2.2.0

common safe-exceptions
  build-depends: safe-exceptions ==0.1.7.4

library
  import:
    options
    , base
    , relude
    , safe-exceptions

  build-depends:
    , aeson           ==2.2.3.0
    , async           ==2.2.5
    , blaze-html      ==0.9.2.0
    , bytestring      ==0.11.5.3
    , servant-blaze   ==0.9.1
    , servant-server  ==0.20.2
    , sqids           ==0.2.2.0
    , stm             ==2.5.1.0
    , time            ==1.12.2
    , wai-websockets  ==3.0.1.2
    , websockets      ==0.13.0.0

  hs-source-dirs:  src

  -- cabal-fmt: expand src
  exposed-modules:
    Jukebox.API
    Jukebox.HTML
    Jukebox.Rooms

executable jukebox
  import:
    options
    , relude

  ghc-options:    -threaded
  build-depends:
    , jukebox
    , wai-logger  ==2.5.0
    , warp        ==3.4.4

  hs-source-dirs: cmd/jukebox
  main-is:        Main.hs

  -- cabal-fmt: expand cmd/jukebox -Main
  other-modules:
